--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "hash_file": "~0.1.0"
+    "hash_file": "~0.1.0",
+    "easyimage": "~0.1.3"
   }
 }
